charts/synapse/tests/golden/fixtures/test-matrix-auth-ingress.golden.yaml
---
# Source: synapse/templates/matrix-authentication-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-authentication
  
  annotations: 
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.org/client-max-body-size: 50m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - NOT-CONFIGURED
  rules:
  - host: NOT-CONFIGURED
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: matrix-authentication
